Homepage: Fix mobile summary styling when not wrapped in a link
The CSS assumed that every module's mobile summary would be wrapped in
an <a> tag, but the startemail module's isn't.

Bug: T258008

--- a/modules/homepage/ext.growthExperiments.Homepage.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.less
@@ -104,21 +104,21 @@ body.mw-special-Homepage {
 
 			> a {
 				text-decoration: none;
+			}
 
-				> .growthexperiments-homepage-module {
-					margin: 1em 0 0 0;
-					padding: 0 1em 1em 1em;
-					.box-shadow( none );
+			.growthexperiments-homepage-module {
+				margin: 1em 0 0 0;
+				padding: 0 1em 1em 1em;
+				.box-shadow( none );
 
-					h2.growthexperiments-homepage-module-section-header {
+				h2.growthexperiments-homepage-module-section-header {
+					padding: 0;
+					margin: 0.625em 0;
+
+					.growthexperiments-homepage-module-header-text {
+						font-size: 0.729em;
+						line-height: 1.429em;
 						padding: 0;
-						margin: 0.625em 0;
-
-						.growthexperiments-homepage-module-header-text {
-							font-size: 0.729em;
-							line-height: 1.429em;
-							padding: 0;
-						}
 					}
 				}
 			}
